testsuite/tests/rep-poly/RepPolyArrowFun.stderr

RepPolyArrowFun.hs:29:9: error:
    • • The return type of the arrow function
          ‘arr’
        does not have a fixed runtime representation.
        Its type is:
          arr b c :: TYPE r
      • The return type of the arrow function
          ‘(>>>)’
        does not have a fixed runtime representation.
        Its type is:
          arr a1 c4 :: TYPE r
      • The return type of the arrow function
          ‘first’
        does not have a fixed runtime representation.
        Its type is:
          arr (b1, d) (c5, d) :: TYPE r
    • When checking that ‘arr’ (needed by a syntactic construct)
        has the required type: forall b c. (b -> c) -> arr b c
        arising from a proc expression at RepPolyArrowFun.hs:29:9-32
      In the expression: proc x -> undefined -< x
      In an equation for ‘foo’: foo _ = proc x -> undefined -< x

RepPolyArrowFun.hs:29:19: error:
    • The function in the first order arrow application of
        ‘undefined’
      to
        ‘x’
      does not have a fixed runtime representation.
      Its type is:
        arr a a :: TYPE r
    • In the command: undefined -< x
      In the expression: proc x -> undefined -< x
      In an equation for ‘foo’: foo _ = proc x -> undefined -< x
